# Generated by Django 4.2.25 on 2025-10-22 22:36

from django.db import migrations, models
import django.db.models.deletion


class Migration(migrations.Migration):

    dependencies = [
        ('documents', '0012_incident_incidentimage_delete_vehiclestatusimage'),
    ]

    operations = [
        migrations.CreateModel(
            name='IngresoImage',
            fields=[
                ('id_image', models.AutoField(primary_key=True, serialize=False)),
                ('name', models.CharField(max_length=100)),
                ('image', models.ImageField(upload_to='ingreso_images/')),
                ('uploaded_at', models.DateTimeField(auto_now_add=True)),
                ('ingreso', models.ForeignKey(db_column='ingreso_id', on_delete=django.db.models.deletion.CASCADE, related_name='images', to='documents.ingreso')),
            ],
            options={
                'db_table': 'IngresoImages',
            },
        ),
    ]
