# Generated by Django 4.2.25 on 2025-10-22 12:57

from django.db import migrations, models
import django.db.models.deletion


class Migration(migrations.Migration):

    dependencies = [
        ('documents', '0011_vehiclestatusimage'),
    ]

    operations = [
        migrations.CreateModel(
            name='Incident',
            fields=[
                ('id_incident', models.AutoField(primary_key=True, serialize=False)),
                ('name', models.CharField(max_length=200)),
                ('incident_type', models.CharField(choices=[('Mecanica', 'Mecánica'), ('Electrica', 'Eléctrica'), ('Carroceria', 'Carrocería'), ('Neumaticos', 'Neumáticos'), ('Otro', 'Otro')], max_length=50)),
                ('severity', models.CharField(choices=[('Baja', 'Baja'), ('Media', 'Media'), ('Alta', 'Alta'), ('Critica', 'Crítica')], default='Media', max_length=20)),
                ('category', models.CharField(choices=[('Seguridad', 'Seguridad'), ('Operativo', 'Operativo'), ('Mantenimiento', 'Mantenimiento')], default='Operativo', max_length=50)),
                ('description', models.TextField()),
                ('symptoms', models.TextField(blank=True, null=True)),
                ('possible_cause', models.TextField(blank=True, null=True)),
                ('location', models.CharField(blank=True, max_length=200, null=True)),
                ('latitude', models.DecimalField(blank=True, decimal_places=8, max_digits=10, null=True)),
                ('longitude', models.DecimalField(blank=True, decimal_places=8, max_digits=11, null=True)),
                ('status', models.CharField(choices=[('Reportada', 'Reportada'), ('En_revision', 'En revisión'), ('Resuelta', 'Resuelta'), ('Cerrada', 'Cerrada')], default='Reportada', max_length=30)),
                ('priority', models.CharField(choices=[('Baja', 'Baja'), ('Normal', 'Normal'), ('Alta', 'Alta'), ('Urgente', 'Urgente')], default='Normal', max_length=20)),
                ('reported_at', models.DateTimeField(auto_now_add=True)),
                ('resolved_at', models.DateTimeField(blank=True, null=True)),
                ('resolution_notes', models.TextField(blank=True, null=True)),
                ('estimated_resolution_time', models.CharField(blank=True, max_length=50, null=True)),
                ('is_emergency', models.BooleanField(default=False)),
                ('requires_tow', models.BooleanField(default=False)),
                ('affects_operation', models.BooleanField(default=False)),
                ('follow_up_required', models.BooleanField(default=False)),
                ('resolution_type', models.CharField(blank=True, choices=[('Taller', 'Taller'), ('Campo', 'Campo'), ('No_aplica', 'No aplica')], max_length=50, null=True)),
                ('auto_resolved', models.BooleanField(default=False)),
                ('resolution_source', models.CharField(blank=True, choices=[('OT_Completada', 'OT Completada'), ('Ingreso_Cerrado', 'Ingreso Cerrado'), ('Manual', 'Manual')], max_length=50, null=True)),
                ('created_at', models.DateTimeField(auto_now_add=True)),
                ('updated_at', models.DateTimeField(auto_now=True)),
                ('assigned_to', models.ForeignKey(blank=True, db_column='assigned_to_id', null=True, on_delete=django.db.models.deletion.SET_NULL, related_name='assigned_incidents', to='documents.flotauser')),
                ('created_by', models.ForeignKey(blank=True, db_column='created_by_id', null=True, on_delete=django.db.models.deletion.SET_NULL, related_name='created_incidents', to='documents.flotauser')),
                ('related_ingreso', models.ForeignKey(blank=True, db_column='related_ingreso_id', null=True, on_delete=django.db.models.deletion.SET_NULL, related_name='incidents', to='documents.ingreso')),
                ('related_schedule', models.ForeignKey(blank=True, db_column='related_schedule_id', null=True, on_delete=django.db.models.deletion.SET_NULL, related_name='incidents', to='documents.maintenanceschedule')),
                ('related_work_order', models.ForeignKey(blank=True, db_column='related_work_order_id', null=True, on_delete=django.db.models.deletion.SET_NULL, related_name='incidents', to='documents.workorder')),
                ('reported_by', models.ForeignKey(db_column='reported_by_id', on_delete=django.db.models.deletion.CASCADE, related_name='reported_incidents', to='documents.flotauser')),
                ('route', models.ForeignKey(blank=True, db_column='route_id', null=True, on_delete=django.db.models.deletion.SET_NULL, related_name='incidents', to='documents.route')),
                ('updated_by', models.ForeignKey(blank=True, db_column='updated_by_id', null=True, on_delete=django.db.models.deletion.SET_NULL, related_name='updated_incidents', to='documents.flotauser')),
                ('vehicle', models.ForeignKey(db_column='vehicle_id', on_delete=django.db.models.deletion.CASCADE, related_name='incidents', to='documents.vehicle')),
            ],
            options={
                'db_table': 'Incidents',
            },
        ),
        migrations.CreateModel(
            name='IncidentImage',
            fields=[
                ('id_image', models.AutoField(primary_key=True, serialize=False)),
                ('name', models.CharField(max_length=100)),
                ('image', models.ImageField(upload_to='incident_images/')),
                ('uploaded_at', models.DateTimeField(auto_now_add=True)),
                ('incident', models.ForeignKey(db_column='incident_id', on_delete=django.db.models.deletion.CASCADE, related_name='images', to='documents.incident')),
            ],
            options={
                'db_table': 'IncidentImages',
            },
        ),
        migrations.DeleteModel(
            name='VehicleStatusImage',
        ),
    ]
